--- a/style.css
+++ b/style.css
@@ -9,13 +9,14 @@
 /* Navbar Section */
 .max-width{
     max-width: 1300px;
-    padding: 0 80px;
+    padding: 0 60px;
     margin: auto;
 }
 .navbar{
     position: fixed;
     width: 100%;
     padding: 20px 0;
+    z-index: 999;
     /*background: #2f3240;*/
     font-family: 'Ubuntun', sans-serif;
     transition: all 0.3s ease;
@@ -87,11 +88,70 @@
     font-weight: 500;
 }
 
+/*About me*/
+section{
+    padding: 100px 0;
+}
+.about{
+    font-family: 'Poppins' sans-serif;
+}
+.about .title{
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Ubuntu' sans-serif;
+}
+.about .title::before{
+    content: "";
+    position: absolute;
+    width: 180px;
+    height: 3px;
+    bottom: 0px;
+    left: 50%;
+    background: #3A3845;
+    transform: translateX(-50%);
+}
+.about .title::after{
+    content: "i am";
+    position: absolute;
+    bottom: -12px;
+    left: 50%;
+    font-size: 20px;
+    color: crimson;
+    padding: 5px;
+    background: #ffff;
+    transform: translateX(-50%);
+}
+.about .about-content .left{
+    width: 45%;
+}
+.about .about-content .left img{
+    height: 400px;
+    width: 350px;
+    object-fit: cover;
+    border-radius: 40px;
+    border: 2px solid #3A3845;
+}
+.about .about-content .right{
+    width: 5  5%;
+}
+
 /*responsive navbar media*/
-@media(max-width: 947px){
+@media(max-width: 1104px){
+    .home.max-width{
+        margin-left: 0px;
+    }
+}
+@media(max-width: 991px){
     .max-width{
         padding: 0 50px;
     }
+}
+
+@media(max-width: 947px){
     .menu-btn{
         display: block;
         z-index: 999;
@@ -126,6 +186,18 @@
     }
     .home .home-content .text-3{
         font-size: 35px;
-       
     }
 }
+
+@media(max-width: 690px){
+    .max-width{
+        padding: 0 50px;
+    }
+    .home .home-content .text-2{
+        font-size: 60px;
+    }
+    .home .home-content .text-3{
+        font-size: 32px;
+    }
+}
+
